--- a/www/templates/userlist.html
+++ b/www/templates/userlist.html
@@ -3,6 +3,7 @@
     <ion-list>
       <ion-item
         class="item-remove-animate item-avatar item-icon-right"
+        ng-class="{'user-entered': user.enter}"
         ng-repeat="user in userList"
         type="item-text-wrap"
         ng-click="userEnter(user)">
