--- a/www/templates/userlist.html
+++ b/www/templates/userlist.html
@@ -11,8 +11,11 @@
         <img ng-src="{{user.face}}" />
         <h2 ng-bind="user.name"></h2>
         <p ng-show="user.enter" ng-bind-template="Enter: {{user.enter.timeString}}"></p>
-        <button class="button button-positive" ng-click="inOut()">
+        <button ng-show="ChangeIcon" class="button button-positive" ng-click="inFunc()">
           <i class="icon ion-checkmark-circled"></i>
+        </button>
+        <button ng-hide="ChangeIcon" class="button button-positive" ng-click="inFunc()">
+          <i class="icon ion-close-circled"></i>
         </button>
 
         <!-- <ion-option-button class="button-assertive">
