--- a/www/templates/userlist.html
+++ b/www/templates/userlist.html
@@ -11,11 +11,7 @@
         <img ng-src="{{user.face}}" />
         <h2 ng-bind="user.name"></h2>
         <p ng-show="user.enter" ng-bind-template="Enter: {{user.enter.timeString}}"></p>
-
-        <button ng-show="!user.ShowIcon" class="button button-positive" ng-click="inFunc(user)">
-          <i class="icon ion-close-circled"></i>
-        </button>
-        <button ng-show="user.ShowIcon" class="button button-positive" ng-click="inFunc(user)">
+        <button class="button button-positive" ng-click="inOut()">
           <i class="icon ion-checkmark-circled"></i>
         </button>
 
