--- a/www/templates/userlist.html
+++ b/www/templates/userlist.html
@@ -6,13 +6,16 @@
         ng-class="{'user-entered': user.enter}"
         ng-repeat="user in userList"
         type="item-text-wrap"
-        ng-click="userEnter(user)">
+        ng-init="user.showEnterBtn = true; user.showLeaveBtn = false;">
 
         <img ng-src="{{user.face}}" />
         <h2 ng-bind="user.name"></h2>
         <p ng-show="user.enter" ng-bind-template="Enter: {{user.enter.timeString}}"></p>
-        <button class="button button-positive" ng-click="inOut()">
+        <button class="button button-positive" ng-click="userEnter(user)" ng-show="user.showEnterBtn">
           <i class="icon ion-checkmark-circled"></i>
+        </button>
+        <button class="button button-positive" ng-click="userLeave(user)" ng-show="user.showLeaveBtn">
+          <i class="icon ion-close-circled"></i>
         </button>
 
         <!-- <ion-option-button class="button-assertive">
