--- a/www/templates/userlist.html
+++ b/www/templates/userlist.html
@@ -3,22 +3,21 @@
     <ion-list>
       <ion-item
         class="item-remove-animate item-avatar item-icon-right item-button-right"
-        ng-class="{'user-entered': user.enter ,'increase-height': user.expand}"
+        ng-class="{'user-entered': user.enter ,'increase-height': user.expand && user.enter.timeString}"
         ng-repeat="user in userList"
         type="item-text-wrap"
-        ng-init="user.showEnterBtn = true; user.showLeaveBtn = false;" ng-click="edit(user)">
+        ng-init="user.showEnterBtn = true; user.showLeaveBtn = false;">
 
         <img ng-src="{{user.face}}" />
-        <h2 ng-bind="user.name"></h2>
-        <p ng-show="user.enter" ng-bind-template="Enter: {{user.enter.timeString}}"></p>
+        <h2 ng-bind="user.name" ng-click="editable(user)"></h2>
+        Enter: <input type="time" step="1" ng-show="user.enter" ng-value="user.enter.timeString" ng-disabled="!user.expand"/><br/>
+        Leave: <input type="time" step="1" ng-show="user.leave" ng-value="user.leave.timeString" ng-disabled="!user.expand"/>
         <button class="button button-positive" ng-click="userEnter(user)" ng-show="user.showEnterBtn">
           <i class="icon ion-checkmark-circled"></i>
         </button>
         <button class="button button-positive" ng-click="userLeave(user)" ng-show="user.showLeaveBtn">
           <i class="icon ion-close-circled"></i>
         </button>
-        <input ng-show="user.expand" type="time" ng-value="user.enterTime">
-        <input ng-show="user.expand" type="time" >
         <!-- <ion-option-button class="button-assertive">
           Test
         </ion-option-button> -->
